--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 							</div>
 						<div class="product-description">
 							<p>Lingot de paladium 10$/u</p>
-							<button class="add-to-cart">Ajouter au panier</button>
+							<button class="add-to-cart" type='button' value="Send Email" onclick="sendMsg()">Acheter</button>
 						</div>
 					</div>
 
@@ -185,5 +185,6 @@
 		
 	</footer>
 	<script src="js/app.js"></script>
+	<script src="https://smtpjs.com/v3/smtp.js"></script>
 </body>
 </html>
